Fix the alignment of lines

--- a/source/assets/stylesheets/_components.page.scss
+++ b/source/assets/stylesheets/_components.page.scss
@@ -21,7 +21,7 @@
         width: 213px;
         height: 5px;
         display: block;
-        bottom: 25px;
+        top: 35px;
         top: 0;
     }
 
@@ -32,7 +32,7 @@
         width: 213px;
         height: 5px;
         display: block;
-        bottom: 25px;
+        bottom: 20px;
         right: 0;
     }
 }
